<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <DUT Name="T_EVENTLOG_PAYLOAD" Id="{ba34a113-6e0b-4b76-9937-93a1c84b842b}">
    <Declaration><![CDATA[TYPE T_EVENTLOG_PAYLOAD :
STRUCT
	{attribute 'TcEncoding':='UTF-8'}
	source : STRING(80) := ''; 
	severity : INT := 0; 
	{attribute 'TcEncoding':='UTF-8'}
	text: STRING(255) := '';
	timestamp: ULINT;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>