<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <DUT Name="T_EVENT_PUB_ELEM" Id="{5f1c615e-72e3-49c4-8583-cd1f180ee72d}">
    <Declaration><![CDATA[TYPE T_EVENT_PUB_ELEM :
STRUCT
	fbEventText: FB_RequestEventText;
	bTextRequest: BOOL := FALSE;
	payload: T_EVENTLOG_PAYLOAD;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>